# tracks-renderer

./: Cargo.toml  README-WASM.md  package.json  pnpm-lock.yaml
scripts/: build_renderer.js
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: BevyViewer.tsx  BevyWasmViewer.tsx
tracks-renderer/: Cargo.toml
tracks-renderer/src/: bevy_renderer.rs  lib.rs  main.rs
