[package]
name = "tracks-renderer"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
bevy = "0.18.1"
wasm-bindgen = { version = "0.2", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

[features]
wasm = ["wasm-bindgen", "console_error_panic_hook"]
default = ["wasm"]